--- a/src/Component/Login/Login.module.css
+++ b/src/Component/Login/Login.module.css
@@ -25,9 +25,10 @@
 }
 .form {
   margin: 0 auto;
-  margin-top: 25%;
+  margin-top: 20%;
   max-width: 70%;
 }
 .button {
   width: 100%;
+  height: 3.5rem;
 }
