--- a/src/Component/Card/Card.module.css
+++ b/src/Component/Card/Card.module.css
@@ -1,10 +1,11 @@
 .issue-container {
   width: 350px;
-  background: #fff;
+  background: rgb(220, 205, 205);
   padding: 5px 10px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   border-radius: 2%;
-  margin-bottom: 2%;
+  margin-bottom: 5%;
+  border-color: #2e2e32;
 }
 .issue-details {
   display: flex;
@@ -20,7 +21,7 @@
 }
 .issue-description p {
   margin-top: -1%;
-  color: #777778;
+  color: #2c2c2c;
 }
 .assignee-details {
   display: flex;
@@ -56,5 +57,5 @@
   text-transform: capitalize;
 }
 .priority {
-  color: #777778;
+  color: #53535a;
 }
