--- a/src/Component/IssueCard/IssueCard.module.css
+++ b/src/Component/IssueCard/IssueCard.module.css
@@ -9,11 +9,11 @@
   border-radius: 10px;
   margin-bottom: 5px;
   font-size: 15px;
-  color: #4d4d4d;
+  color: #e5e0e0;
   width: inherit;
   text-align: left;
-  background-color: rgb(255, 255, 255);
-  border: 0.02px solid rgb(153, 153, 153);
+  background-color: rgb(222, 212, 212);
+  border: 0.02px solid rgb(41, 38, 38);
 }
 
 .card-container > ul {
@@ -58,7 +58,7 @@
 }
 
 .issue-cards-column {
-  color: #494949;
+  color: #eadede;
   font-size: 15px;
   border-radius: 10px;
   background-color: rgb(202, 200, 198);
@@ -85,14 +85,15 @@
   display: flex;
   justify-content: space-around;
   margin-top: 2%;
-  background: #f7f8fa;
+  background: #dadfe9;
   overflow-y: hidden;
   height: 405px;
   overflow-y: scroll;
 }
 .type {
-  color: #757575;
-  font-size: 12px;
+  color: #0a0a0a;
+  font-size: 15px;
+  font-weight: bold;
   padding-top: 1%;
   line-height: 20px;
   letter-spacing: 0.4px;
