--- a/src/Component/NavBar/NavBar.module.css
+++ b/src/Component/NavBar/NavBar.module.css
@@ -1,13 +1,13 @@
 .header {
   width: 80vw;
   height: 80px;
-  background: #e4e7ed;
+  background: #9f9fa0;
   display: flex;
 }
 .search {
   border: none;
   border-right: 1px solid #000;
-  background: #e6e9ed;
+  background: #818284;
   height: 80px;
   width: 60vw;
   padding-left: 45px;
